8193130: Bad graph when unrolled loop bounds conflicts with range checks

Reviewed-by: kvn, thartmann